--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,10 @@
 # key = value
 quarkus.http.port=8081
 quarkus.banner.path=mybanner
+
+remote.name = クラスで一括読み込み
+remote.s3.url = http://localhost:7480
+remote.s3.accesskey = akey
+remote.s3.secretkey = skey
+remote.api.timeout = 1000
+remote.api.log = remote.log
