--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,10 @@ remote.s3.accesskey = akey
 remote.s3.secretkey = skey
 remote.api.timeout = 1000
 remote.api.log = remote.log
+
+quarkus.datasource.db-kind=mysql
+quarkus.datasource.username=root
+quarkus.datasource.password=
+quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/sakedb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=JST
+quarkus.datasource.jdbc.min-size=4
+quarkus.datasource.jdbc.max-size=16
