--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 # Configuration file
 # key = value
-quarkus.http.port=8081
+quarkus.http.port=8080
 quarkus.banner.path=mybanner
+# quarkus-agroal がデフォルトで healthcheck を追加しちゃうので無効にする
+quarkus.datasource.health.enabled = false
 
 remote.name = クラスで一括読み込み
 remote.s3.url = http://localhost:7480
@@ -16,3 +18,21 @@ quarkus.datasource.password=
 quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/sakedb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=JST
 quarkus.datasource.jdbc.min-size=4
 quarkus.datasource.jdbc.max-size=16
+
+# health check 用の拡張プロパティ (値はデフォルト)
+# see https://quarkus.io/guides/microprofile-health#configuration-reference
+#
+# 拡張機能で追加されてヘルスチェックを有効にするか？
+# quarkus.health.extensions.enabled = true
+
+# ヘルスチェックのルートパス
+# quarkus.smallrye-health.root-path = /health
+
+# live ポイントのパス
+# quarkus.smallrye-health.liveness-path = /live
+
+# ready ポイントへのパス
+# quarkus.smallrye-health.readiness-path = /ready
+
+# group ポイントのパス（これがなんだかわからない。唐突に出てきた）
+# quarkus.smallrye-health.group-path = /grup
