CORSの設定を追記

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,8 @@ quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/sakedb?useUnicode=true&u
 quarkus.datasource.jdbc.min-size=4
 quarkus.datasource.jdbc.max-size=16
 
+quarkus.http.cors=true
+
 # health check 用の拡張プロパティ (値はデフォルト)
 # see https://quarkus.io/guides/microprofile-health#configuration-reference
 #
