properties をやめて yaml に

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #Gradle properties
-#Sun May 17 05:37:59 UTC 2020
+#Sun Jun 07 14:37:26 JST 2020
 quarkusPluginVersion=1.4.2.Final
 quarkusPlatformArtifactId=quarkus-universe-bom
 quarkusPlatformGroupId=io.quarkus
