--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,9 +14,20 @@ quarkus:
       url: jdbc:mysql://localhost:3306/sakedb?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=JST
       min-size: 4
       max-size: 16
+
+"%staging":
+  remote:
+    name: ステージング環境用リモート設定
+    s3:
+      url: http://10.199.256.101:8888
+      accesskey: ajkfiebudjfdk343809b
+      secretkey: akl33iddskeyklaei3
+    api:
+      timeout: 500
+      log: remote_staging.log
                     
 remote:
-  name: クラスで一括読み込み
+  name: 開発環境用リモート設定
   s3:
     url: http://localhost:7480
     accesskey: akey
@@ -24,6 +35,7 @@ remote:
   api:
     timeout: 1000
     log: remote.log
+        
 
 # health check 用の拡張プロパティ (値はデフォルト)
 # see https://quarkus.io/guides/microprofile-health#configuration-reference
